Version History
===============

3.1a1
-----

* Upgraded the installation procedure for Products.CMFEditions. [pumazi]

3.0
---

* Update person.pt in MobilePhoneExtender to be consistent with FSD's person.pt
  (to fix Plone 4 compatibility).
  [cah190]

* Added missing adapter registration to MobilePhoneExtender.
  [cah190]
  
* activeMembraneStates in the fsdtool now uses a MultiSelectionWidget and the
  workflow states vocabulary.
  [cah190]
  
* Updated course_view.pt for Plone 4.
  [cah190]

3.0b4
-----

* No longer support extenderInstallation install methods.  installExtender and
  installExtenderGloballyIfLocallyIsNotSupported will now throw exceptions.
  uninstallExtender will stay around for at least the 3.0 releases to permit
  easy cleanup of old extender installs.
  [cah190]

* Extender developers should use IBrowserLayerAwareExtender to register their
  extender against a browserlayer to make it possible to activate the extender
  per Plone site.  MobilePhoneExtender has been updated as an example.
  [cah190]

* Drop the icon for the vCard action.
  [esteele]
  
* Slightly rearrange package layout.
  [esteele]
  
* Stop creating a 'my folder' action. This went away in Plone 3.
  [esteele]
  
* Stop using deprecated actionicons_tool and put the icon directly on the action.
  [cah190 (Craig Haynal)]

* Register facultystaffdirectory_tool via GS.
  [cah190 (Craig Haynal)]

* Catalog indexes and metadata are now loaded via GS.
  [cah190 (Craig Haynal)]

* Collection/SmartFolder indexes are now loaded via GS.
  [cah190 (Craig Haynal)]

* Register configlet via GenericSetup.
  [esteele]
  
* Set up navtree properties via GenericSetup.
  [esteele]
  
* Use an import step and GS profile to set up versioning and diffing,
  respectively.
  [esteele]
  
* Reinstall/Refresh is not a Plone supported updating mechanism. Use
  portal_setup instead. Removing the code encouraging this sort of thing.
  [esteele]
  