@@ -6,7 +6,7 @@ __docformat__ = 'plaintext'
 from AccessControl import ClassSecurityInfo
 from Acquisition import aq_inner, aq_parent
 from Products.Archetypes.atapi import *
-from Products.ATReferenceBrowserWidget.ATReferenceBrowserWidget import ReferenceBrowserWidget
+from archetypes.referencebrowserwidget.widget import ReferenceBrowserWidget
 from Products.CMFCore.permissions import View
 from Products.FacultyStaffDirectory.PersonGrouping import PersonGrouping
 from Products.Relations.field import RelationField
